# Smart-Data-Cleaning-and-Preprocessing-tool

./: .env.example  .gitignore  Dockerfile  README.md  RUN_APP.bat  TESTING.md  WHITE_FLOW_DIAGRAM.md  cleaned_dataset.csv  cleaning_report_dataset.md  docker-compose.yml  implementation_plan.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  smart_cleaner.py  test_smart_cleaner.py  test_upload.py  walkthrough.md
.github/workflows/: ci-cd.yml
SmartCleaner/: .gitignore  README.md  docker-compose.yml  render.yaml  requirements.txt  task.md
SmartCleaner/inputs/: sample_corpus_test.md  test_data.xml
SmartCleaner/k8s/: deployment.yaml
SmartCleaner/web/: compliance.py  errors.py  logging_config.py  metrics.py  performance.py  review_workflow.py  security.py  server.py  test_unstructured_processor.py  unstructured_processor.py
inputs/: cleaned_covid_19_data.csv  cleaning_report_covid_19_data.md  messy_healthcare_data.xml  sample_clinical_trial.md  sample_ehr_log.txt  t1 json.json  test_data.json
prototype (v0.0.7)/: analysis_execution_ui.py  cleaned_Covid Live.csv  op.csv  yaml.yaml
prototype (v0.0.9)/: a.csv  inp.json  inp.xml  unstruct1.py  unstruct2.py
prototype (v0.1.2)/: unstruct1.py
prototype (v0.1.2)/ops/: a.csv
web/: accessibility.py  config.py  security.py  server.py  unstructured_processor.py  validators.py
web/static/: app.js  styles.css  unstructured.js  visualize.js
web/templates/: docs.html  index.html  landing.html  medclean_ai.html  medclean_new_js.txt
web/uploads/: sample_medical_notes.txt
(+11 files in other folders)
