[project]
name = "smart-data-cleaner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "Werkzeug==3.0.1",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "scikit-learn==1.4.2",
    "PyMuPDF==1.25.1",
    "thefuzz[speedup]==0.22.1",
    "symspellpy==6.9.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "Flask-Limiter==3.5.0",
    "defusedxml==0.7.1",
    "python-magic==0.4.27"
]

[tool.vercel]
entrypoint = "web.server:app"
